--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <title>My first template</title>
     <!--Bootstrap CSS link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        .nav{
+            background:#555;
+        }
+        .nav-link,.footer{
+            color:white;
+        }
+
+        .nav-link:hover, .active{
+            background:rgb(20, 173, 173);
+            color:white;
+        }
+
+        .container1{
+            background:#E6358B;
+        }
+
+
+    </style>
     
 </head>
 <body>
